z-index fixes.

--- a/static/less/module-search.less
+++ b/static/less/module-search.less
@@ -8,7 +8,7 @@
   padding: 20px;
   overflow: hidden;
   white-space: nowrap;
-  z-index: 1;
+  z-index: 10;
   padding-bottom: 5px;
   .border-radius(2px);
   .box-shadow(#222, 0, 0, 10px);
