--- a/static/less/settings.less
+++ b/static/less/settings.less
@@ -7,7 +7,7 @@
   position: absolute;
   top: 0;
   width: 40px;
-  z-index: 1;
+  z-index: 100;
 
   border-bottom-right-radius: 40px;
   -moz-border-radius-bottomright: 40px;
@@ -45,7 +45,7 @@
   right: 0;
   top: 0;
   width: 40px;
-  z-index: 10;
+  z-index: 100;
 
   -webkit-transition: width 0.2s ease-in-out;
   -moz-transition: width 0.2s ease-in-out;
